egress-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - httpbin.org
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin-egress
spec:
  host: istio-egressgateway.control-plane.svc.cluster.local
  subsets:
  - name: httpbin
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-egress
spec:
  hosts:
  - httpbin.org
  gateways:
  - mesh
  - istio-egressgateway
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - httpbin.org
    route:
    - destination:
        host: istio-egressgateway.control-plane.svc.cluster.local
        subset: httpbin
        port:
          number: 443
  # - match:
  #   - gateways:
  #     - istio-egressgateway
  #     port: 80
  #     sniHosts:
  #     - httpbin.org
  #   route:
  #   - destination:
  #       host: httpbin.org
  #       port:
  #         number: 443
  #     weight: 100
