egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
  namespace: control-plane
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - httpbin.org
    # tls:
    #   mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin
  namespace: data-plane
spec:
  host: istio-egressgateway.control-plane.svc.cluster.local
  # subsets:
  # - name: httpbin
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: data-plane
spec:
  hosts:
  - httpbin.org
  gateways:
  - control-plane/istio-egressgateway
  http:
  - route:
    - destination:
        host: httpbin.org
        port:
          number: 80
      weight: 100
