frontend-route-istio-passthrough.yaml
apiVersion: v1
kind: Route
metadata:
  name: frontend
spec:
  host: frontend.apps.SUBDOMAIN
  port:
    targetPort: https
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  tls:
    termination: passthrough
  wildcardPolicy: None
