frontend-virtual-service-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
spec:
  hosts:
  - frontend.apps.SUBDOMAIN
  gateways:
  - wildcard-gateway.control-plane.svc.cluster.local
  http:
  - match:
    - headers:
        user-agent:
          regex: "^Mozilla(.*)"
    route:
    - destination:
        host: frontend
        port:
          number: 8080
        subset: v2
  - route:
    - destination:
        host: frontend
        port:
          number: 8080
        subset: v1
