frontend-virtual-service-chaos.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
spec:
  hosts:
  - frontend.apps.SUBDOMAIN
  gateways:
  - wildcard-gateway.control-plane.svc.cluster.local
  http:
  - fault:
      abort:
        # Return HTTP 500 for every request
        httpStatus: 500
        percentage:
          value: 100
    # When header foo = bar
    match:
    - headers:
        foo:
          exact: bar
    route:
    - destination:
        host: frontend.data-plane.svc.cluster.local
  - route:
    - destination:
        host: frontend.data-plane.svc.cluster.local
