frontend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
spec:
  hosts:
  - frontend.apps.SUBDOMAIN
  gateways:
  - wildcard-gateway.control-plane.svc.cluster.local
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: frontend.data-plane.svc.cluster.local
