httpbin-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - httpbin.org
  http:
  - route:
      - destination:
          host: httpbin.org
        weight: 100
    timeout: 3s
